[package]
name = "omni-car-bridge"
version = "0.1.0"
edition = "2024"
description = "Feetech omni-car HTTP bridge for octos skill"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
anyhow = "1"
