[package]
name = "omni-car-bridge"
version = "0.1.0"
edition = "2024"
description = "Feetech omni-car binary-protocol bridge for octos skill"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
anyhow = "1"
